--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -182,15 +182,15 @@ layout: base
           <div class ="main">
         {%- endif -%}
             <div class="grid grid--reverse">
-
+              {%- if page.aside.show -%}
               <div class="col-aside d-print-none js-col-aside">
-                {%- if page.aside -%}
+                
                   <aside class="page__aside js-page-aside">
                     {%- include aside/toc.html -%}
                   </aside>
-                {%- endif -%}
+                
               </div>
-
+              {%- endif -%}
               <div class="col-main cell cell--auto">
                 {%- include main/top/custom.html -%}
                 {%- if _page_type == 'article' -%}
